update requirements and README file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,173 +1,8 @@
-affine @ file:///home/conda/feedstock_root/build_artifacts/affine_1674245120525/work
-asciitree==0.3.3
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1683424013410/work
-backports.tarfile==1.1.1
-bokeh @ file:///home/conda/feedstock_root/build_artifacts/bokeh_1683730530224/work
-boltons @ file:///home/conda/feedstock_root/build_artifacts/boltons_1677499911949/work
-Bottleneck @ file:///home/conda/feedstock_root/build_artifacts/bottleneck_1678327113810/work
-branca @ file:///home/conda/feedstock_root/build_artifacts/branca_1667848736831/work
-build==1.2.1
-Cartopy @ file:///home/conda/feedstock_root/build_artifacts/cartopy_1670926209104/work
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1707022139797/work/certifi
-cf-xarray @ file:///home/conda/feedstock_root/build_artifacts/cf_xarray_1687665385981/work
-cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1671179355965/work
-cfgrib @ file:///home/conda/feedstock_root/build_artifacts/cfgrib_1684493284302/work
-cftime @ file:///home/conda/feedstock_root/build_artifacts/cftime_1666833839601/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1678108872112/work
-click @ file:///home/conda/feedstock_root/build_artifacts/click_1666798198223/work
-click-plugins==1.1.1
-cligj @ file:///home/conda/feedstock_root/build_artifacts/cligj_1633637764473/work
-cloudpickle @ file:///home/conda/feedstock_root/build_artifacts/cloudpickle_1674202310934/work
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1704278392174/work
-contourpy @ file:///work/ci_py311/contourpy_1676827066340/work
-cryptography==42.0.7
-cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1635519461629/work
-cytoolz @ file:///home/conda/feedstock_root/build_artifacts/cytoolz_1666829667355/work
-dask @ file:///home/conda/feedstock_root/build_artifacts/dask-core_1686329713262/work
-debugpy @ file:///home/conda/feedstock_root/build_artifacts/debugpy_1695534290440/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-distributed @ file:///home/conda/feedstock_root/build_artifacts/distributed_1686332905840/work
-docutils==0.21.2
-eccodes @ file:///home/conda/feedstock_root/build_artifacts/python-eccodes_1675176700397/work
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1643888246732/work
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1704921103267/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
-fasteners @ file:///home/conda/feedstock_root/build_artifacts/fasteners_1643971550063/work
-filelock @ file:///home/conda/feedstock_root/build_artifacts/filelock_1698714947081/work
-findlibs @ file:///home/conda/feedstock_root/build_artifacts/findlibs_1682423883580/work
-Fiona @ file:///home/conda/feedstock_root/build_artifacts/fiona_1676029467352/work
-folium @ file:///home/conda/feedstock_root/build_artifacts/folium_1670956290671/work
-fonttools==4.25.0
-fsspec @ file:///home/conda/feedstock_root/build_artifacts/fsspec_1686342280219/work
-GDAL @ file:///home/conda/feedstock_root/build_artifacts/gdal-split_1678653585281/work/build/swig/python
-geographiclib==2.0
-geopandas @ file:///home/conda/feedstock_root/build_artifacts/geopandas_1686057576800/work
-geopy==2.4.1
-gmpy2 @ file:///home/conda/feedstock_root/build_artifacts/gmpy2_1666808665953/work
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1663625384323/work
-imagecodecs @ file:///home/conda/feedstock_root/build_artifacts/imagecodecs_1674483081166/work
-imageio @ file:///home/conda/feedstock_root/build_artifacts/imageio_1702571712725/work
-imbalanced-learn @ file:///home/conda/feedstock_root/build_artifacts/imbalanced-learn_1688854416108/work
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1687138353019/work
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1705417941265/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1706795662110/work
-jaraco.classes==3.4.0
-jaraco.context==5.3.0
-jaraco.functools==4.0.1
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
-jeepney==0.8.0
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1654302431367/work
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1687965927691/work
-jsonpickle @ file:///home/conda/feedstock_root/build_artifacts/jsonpickle_1618251192895/work
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1699283905679/work
-jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1704727045866/work
-keyring==25.2.0
-kiwisolver @ file:///work/ci_py311/kiwisolver_1676827230232/work
-lazy_loader @ file:///home/conda/feedstock_root/build_artifacts/lazy_loader_1692295373316/work
-llvmlite==0.40.1
-lmoments3 @ file:///home/conda/feedstock_root/build_artifacts/lmoments3_1679001568987/work
-locket @ file:///home/conda/feedstock_root/build_artifacts/locket_1650660393415/work
-lz4 @ file:///home/conda/feedstock_root/build_artifacts/lz4_1675806669059/work
-Magics @ file:///home/conda/feedstock_root/build_artifacts/magics-python_1675850086204/work
-mapclassify @ file:///home/conda/feedstock_root/build_artifacts/mapclassify_1673861555770/work
-markdown-it-py==3.0.0
-MarkupSafe @ file:///home/conda/feedstock_root/build_artifacts/markupsafe_1685769042879/work
-matplotlib @ file:///croot/matplotlib-suite_1679593461707/work
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
-mdurl==0.1.2
-mkl-fft==1.3.6
-mkl-random @ file:///work/mkl/mkl_random_1682950433854/work
-mkl-service==2.4.0
-more-itertools==10.2.0
-mpi4py @ file:///home/conda/feedstock_root/build_artifacts/mpi4py_1695451917891/work
-mpmath @ file:///home/conda/feedstock_root/build_artifacts/mpmath_1678228039184/work
-msgpack @ file:///home/conda/feedstock_root/build_artifacts/msgpack-python_1678312711771/work
-munch @ file:///home/conda/feedstock_root/build_artifacts/munch_1688318326844/work
-munkres==1.1.4
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
-netCDF4 @ file:///home/conda/feedstock_root/build_artifacts/netcdf4_1678139166116/work
-networkx @ file:///home/conda/feedstock_root/build_artifacts/networkx_1680692919326/work
-nh3==0.2.17
-numba @ file:///home/conda/feedstock_root/build_artifacts/numba_1687804756633/work
-numcodecs @ file:///home/conda/feedstock_root/build_artifacts/numcodecs_1671214260840/work
-numexpr @ file:///croot/numexpr_1683221822650/work
-numpy @ file:///work/mkl/numpy_and_numpy_base_1682953417311/work
-osmnx==1.9.1
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1681337016113/work
+numpy==1.24.3
+xarray==2023.5.0
 pandas==1.5.3
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
-partd @ file:///home/conda/feedstock_root/build_artifacts/partd_1681246756246/work
-patsy @ file:///home/conda/feedstock_root/build_artifacts/patsy_1665356157073/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-Pillow==9.4.0
-Pint @ file:///home/conda/feedstock_root/build_artifacts/pint_1686171160673/work
-pkginfo==1.10.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1687097136512/work
-pooch @ file:///home/conda/feedstock_root/build_artifacts/pooch_1679580333621/work
-powerlaw==1.5
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1702399386289/work
-psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1681775010077/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
+tqdm==4.65.0
+matplotlib==3.7.1
+scipy==1.10.1
+statsmodels==0.14.0
 pyarrow==12.0.0
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
-PyNIO @ file:///home/conda/feedstock_root/build_artifacts/pynio_1676204794482/work
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1687132014935/work
-pyproj @ file:///home/conda/feedstock_root/build_artifacts/pyproj_1680037543633/work
-pyproject_hooks==1.1.0
-pyshp @ file:///home/conda/feedstock_root/build_artifacts/pyshp_1659002966020/work
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz==2021.3
-PyWavelets @ file:///home/conda/feedstock_root/build_artifacts/pywavelets_1695567566807/work
-PyYAML @ file:///home/conda/feedstock_root/build_artifacts/pyyaml_1666772382226/work
-pyzmq @ file:///home/conda/feedstock_root/build_artifacts/pyzmq_1701783162530/work
-rasterio @ file:///home/conda/feedstock_root/build_artifacts/rasterio_1677453136719/work
-readme_renderer==43.0
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1684774241324/work
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
-rich==13.7.1
-rioxarray @ file:///home/conda/feedstock_root/build_artifacts/rioxarray_1681506408124/work
-Rtree @ file:///home/conda/feedstock_root/build_artifacts/rtree_1666813287456/work
-scikit-image @ file:///croot/scikit-image_1682528309703/work
-scikit-learn @ file:///home/conda/feedstock_root/build_artifacts/scikit-learn_1688116542774/work
-scipy @ file:///home/conda/feedstock_root/build_artifacts/scipy-split_1683900207230/work/base/dist/scipy-1.10.1-cp311-cp311-linux_x86_64.whl#sha256=1bd338ba7dac51d895d5361cf982b7b10c354ea9572174207163f0bd84b8d9bb
-seaborn @ file:///home/conda/feedstock_root/build_artifacts/seaborn-split_1672497695270/work
-SecretStorage==3.3.3
-shap @ file:///home/conda/feedstock_root/build_artifacts/shap_1688735567079/work
-shapely @ file:///home/conda/feedstock_root/build_artifacts/shapely_1675079607363/work
-simplejson @ file:///home/conda/feedstock_root/build_artifacts/simplejson_1696595885104/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-slicer @ file:///home/conda/feedstock_root/build_artifacts/slicer_1608146800664/work
-snuggs==1.4.7
-sortedcontainers @ file:///home/conda/feedstock_root/build_artifacts/sortedcontainers_1621217038088/work
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-statsmodels @ file:///home/conda/feedstock_root/build_artifacts/statsmodels_1683305554499/work
-sympy @ file:///home/conda/feedstock_root/build_artifacts/sympy_1684180540116/work
-tblib @ file:///home/conda/feedstock_root/build_artifacts/tblib_1616261298899/work
-threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1643647933166/work
-tifffile @ file:///home/conda/feedstock_root/build_artifacts/tifffile_1692120125985/work
-toolz @ file:///home/conda/feedstock_root/build_artifacts/toolz_1657485559105/work
-torch==2.2.0
-torchaudio==2.2.0
-torchvision==0.17.0
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1684150209296/work
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1677948868469/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1704212992681/work
-triton==2.2.0
-twine==5.0.0
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1685704949284/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1686156552494/work
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
-xarray @ file:///home/conda/feedstock_root/build_artifacts/xarray_1684536552446/work
-xclim @ file:///home/conda/feedstock_root/build_artifacts/xclim_1687882423757/work
-XlsxWriter @ file:///home/conda/feedstock_root/build_artifacts/xlsxwriter_1699211250539/work
-xyzservices @ file:///home/conda/feedstock_root/build_artifacts/xyzservices_1684571362432/work
-zarr @ file:///home/conda/feedstock_root/build_artifacts/zarr_1686774193581/work
-zict @ file:///home/conda/feedstock_root/build_artifacts/zict_1681770155528/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1677313463193/work
